# Praxis

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  activity_steps.md  cookies.txt  diagram.md  docker-compose.yml  frontend_context.txt  frontend_prompt.txt  next_steps.md  next_steps.md.resolved  reproduce_issue.sh  start-tunnel.sh  workflow_guide.md  workflow_guide.md.resolved
apps/api/: .env  Cargo.toml  Dockerfile
apps/api/.sqlx/: query-01cf6cae86551ec31aad63b8e913fe6b3d960e18a089c75dc780f366a9342988.json  query-09e509445dae84b2c6519619b4a372f4e692a17148c1f7395833531563b432d2.json  query-13ded76201e420dd47e36d0c3fa0851254a3a3475eca18f5af47112bab13f217.json  query-1574be452b410e5f87695299e1f28aa50002708ed3c0111cf2816e5fd9f20fc4.json  query-17c819328fa0e102d7869d5ba3b4f5b7da88bf797867e4c03194d00f7683c0fd.json  query-1eb7794a52fba572ae86c0f643527f3885d28fd31f3a9a9b1bc0765d76d7f8f3.json  query-26ea02695fcab719a93fff3af40f7128a1e38e7c6df9e002a1c374cf16647bc1.json  query-2876f838edfe5f6aa2ae0afcd5caac2092c56f3604ca5b680d99c45ae2dab36a.json  query-2c3e9c026261172b78a2d58bb39dcd7898ac65924d985392dd1210ffa8b78f46.json  query-2f039b0ab4af2a42cf03b242d3d3ca7dc738b8e27a576957528264b23bd6f6f2.json  query-2f13ac5e1ac69dba16a8c31fa6b1e13ed59010fe6028bb459b92f53bde15f72a.json  query-31c21633c49295a380bc810221f1a8bdfdc6f9a7dc9dff5216373df63c4cbe53.json  query-35e466ca8b1bb934c9afee98d80cc9bc62a552eb6f4162ae2552ad79b36b2cde.json  query-38d7a12f55da5e7abce6839065c8f5788ba126c5f607f56ed94ce389b8d755e5.json  query-397dc9e9c6b6e0ca7136ec30877e0a2d8461949b78c78d61eca106af5050276f.json  query-4194d2dea32ad674334df96666c59bc71a4b5c22cc4e3df627cb3576ce5c6655.json  query-41a928d87cc8e3a5c4ae90ae68b474bb9b3c5270350c93b427ac1b4a6c716a6b.json  query-42c6893cae2acff04c9a65c5aa9dec2a9c7dae9b940e9471c6a376f1d335f2e2.json  query-4623a555726009f7d6afaf260b5e45913ef4a55867e4ec55f025390a6d0a1027.json  query-48503654e0a62c9a47c4847b6ae9c9f779968582192ac689673dca7be228d15b.json  query-4a91ce1fc970397ef3f7b6513e56590670dd7a5eea612e312931fe766c82fa49.json  query-4aea47002659d85b430339ff8d122146fafb4a684b458b6505602cd9df060c57.json  query-568ffc1686a012462d03426b210f512c2603aa1ee26d9b37aec3e11a461d940e.json  query-5854e3d1a71e31173fbd34dcd200996b270e132cea3a0c8a3a77d1da3237d334.json  query-58bd483a39ef04736a0314a05d4e619824f2f9016848d428616b0b12e42aec5a.json  query-58c1adbc34d457c84994cc60243f0b88cdb7c9b091d3d816fcdcf1ee3db6e3ec.json  query-5b65181dc2f6f5803aded1e0ab72de730a1fd1c680224a4ae38eff32aeae54f8.json  (+50 more)
apps/api/src/: admin.rs  auth.rs  (+15 more)
(+77 files in other folders)
