[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async Runtime & Web Server
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"

# Serialization (JSON)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment Variables
dotenvy = "0.15"

# Database (Postgres)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Authentication & Security
argon2 = "0.5"        # Password Hashing
oauth2 = "4.4"        # GitHub/Google Login
tower-sessions = "0.12" 
tower-sessions-sqlx-store = { version = "0.10", features = ["postgres"] }

# HTTP Client (for calling GitHub API)
reqwest = { version = "0.11", features = ["json"] }