[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime & Web Server
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
axum-extra = { version = "0.9", features = ["multipart"] }

# Serialization (JSON)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# Environment Variables
dotenvy = "0.15"

# Database (Postgres)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Authentication & Security
argon2 = "0.5"        # Password Hashing
oauth2 = "4.4"        # GitHub/Google Login
tower-sessions = "0.12" 
tower-sessions-sqlx-store = { version = "0.12", features = ["postgres"] }

# HTTP Client (for calling GitHub API)
reqwest = { version = "0.11", features = ["json"] }

# Compatibility
http = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Middleware
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "limit"] }
ammonia = "4.1.2"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "builder"] }

# Cloud Storage (Cloudflare R2)
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.17"
aws-credential-types = "1.1"

# WebAuthn / Passkeys
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
webauthn-rs-proto = "0.5"

# TOTP 2FA
totp-rs = { version = "5.0", features = ["gen_secret", "otpauth"] }
base64 = "0.22"
rand = "0.8"
hex = "0.4.3"
